Login and Register buttons now visible on Mobile, Banner photo size is so big (solved)

--- a/YeOrada/YeOradaApp/templates/yeoradamain/css/responsive.css
+++ b/YeOrada/YeOradaApp/templates/yeoradamain/css/responsive.css
@@ -659,9 +659,6 @@ text-align:center;
 	padding:15px 17px;
 	
 }
-.partner-btn {
-display:none;
-}
 .menu-items {
 	float: none;
     padding: 10px 0px;
